add test samples